Fixed visual bug on smaller screens for contact form

--- a/src/App.css
+++ b/src/App.css
@@ -230,6 +230,7 @@ header {
 form {
     max-width: 420px;
     margin: 0 auto;
+    padding-bottom: 1em;
 }
 
 .feedback-input {
